# yapay-sdk-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
src/: checkout.rs  common_types.rs  errors.rs  helpers.rs  lib.rs  simulation.rs  webhooks.rs
src/transaction/: creditcard.rs  mod.rs
tests/: api.rs  common.rs
tests/assets/: creditcard_request.json  creditcard_response.json  simulate_payment_response.json
