[package]
name = "yapay-sdk-rust"
version = "0.3.3"
authors = ["Martin Mariano <contato@martinmariano.com>"]
repository = "https://github.com/saskenuba/yapay-sdk-rust"
edition = "2021"
description = "A strongly-typed wrapper for Yapay payment gateway API."
license = "MIT"


[dependencies]

futures = "0.3"
lazy_static = "1.4"
regex = "1"
reqwest = { version = "0.11", features = ["json", "cookies", "tokio-native-tls"] }
strum = { version = "0.24", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
time = { version = "0.3.9", features = ["serde", "serde-well-known", "parsing", "formatting", "macros"] }
url = "2.2.2"
validator = { version = "0.15", features = ["derive"] }

serde = { version = "1", features = ["derive"] }
serde-aux = "3"
serde_json = "1"
serde_qs = "0.9"
serde_path_to_error = "0.1"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0.0", features = ["v4"] }
